--- a/IMDB_with_fine_tuning_by_USE_20190227.ipynb
+++ b/IMDB_with_fine_tuning_by_USE_20190227.ipynb
@@ -21,7 +21,7 @@
       },
       "cell_type": "markdown",
       "source": [
-        "# Movie review classification by unversal sentence encoder with 200 samples"
+        "# Movie review classification by universal sentence encoder with 200 samples"
       ]
     },
     {
